zaf/zaf/utils/test/syntaxerror/this_file_contains_syntax_error.py
# flake8: noqa

def ():
    pass
